# dmarc-email-parser

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
