[package]
name = "dmarc-email-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
clap = { version = "4", features = ["derive"] }
flate2 = "1.0.22"
instant-xml = "0.5.2"
mailparse = "0.16"
time = { version = "0.3.6", features = ["formatting"] }
zip = { version = "6", default-features = false, features = ["deflate"] }
